# hermes

./: .gitignore  LICENSE  README.md  codecov.yml  dex.docker.yaml  docker-compose.yml  go.work  go.work.sum
.github/workflows/: ci.yml
controller/: Dockerfile  Makefile  config.yaml.example  go.mod  go.sum
controller/cmd/controller/: main.go
controller/internal/config/: config.go  config_test.go
controller/internal/controller/: controller.go  controller_test.go  election.go  heartbeat.go  instance.go  reconcile.go
controller/internal/transport/: transport.go  transport_test.go
gateway/: Cargo.toml  Dockerfile  Makefile  config.toml.example
gateway/src/: error.rs  lib.rs  main.rs
gateway/src/config/: etcd.rs  mod.rs  tests.rs  types.rs
gateway/src/discovery/: client.rs  mod.rs  registry.rs
gateway/src/etcd/: client.rs  mod.rs
gateway/src/metrics/: mod.rs  registry.rs
gateway/src/middleware/: mod.rs  rate_limit.rs  rate_limit_tests.rs
gateway/src/proxy/: context.rs  filter.rs  handler.rs  mod.rs
gateway/src/proxy/filter/: mod.rs  rate_limit.rs
gateway/src/routing/: matcher.rs  mod.rs  radix_tree.rs
gateway/src/server/: admin.rs  bootstrap.rs  instance_registry.rs  mod.rs  runtime.rs  state.rs
gateway/src/upstream/: circuit_breaker.rs  cluster.rs  health.rs  loadbalance.rs  mod.rs
gateway/src/upstream/loadbalance/: least_request.rs  peak_ewma.rs  random.rs  round_robin.rs
gateway/tests/: consul_integration.rs  etcd_integration.rs
server/: .dockerignore  .gitignore  Dockerfile  Makefile  config.yaml.example  go.mod  go.sum
server/cmd/server/: main.go
server/web/: index.html  package-lock.json  package.json  vite.config.js
tests/: auth_test.go  dataplane_test.go  go.mod  go.sum  helpers_test.go  sync_test.go
(+37 files in other folders)
