[package]
name = "hermes-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hermes-gateway"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2", "client-legacy", "server-auto"] }
http-body-util = "0.1"
bytes = "1"
http = "1"
hyper-rustls = { version = "0.27", default-features = false, features = ["ring", "http1", "http2", "tls12", "logging", "webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "logging"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
base64 = "0.22"
futures-util = "0.3.31"

arc-swap = "1"
dashmap = "6"
tokio-util = { version = "0.7", features = ["time", "io"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }

regex = "1"
globset = "0.4"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rand = "0.8"
hostname = "0.4"
humantime = "2"
pnet_datalink = "0.34"
ipnetwork = "0.20"
itoa = "1"

async-compression = { version = "0.4", features = ["tokio", "gzip", "brotli"] }

tikv-jemallocator = "0.6"

[lib]
name = "hermes_gateway"
path = "src/lib.rs"

[dev-dependencies]
testcontainers = "0.27"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
